# wagtail-flexible-forms

./: .gitattributes  .gitignore  LICENSE  LICENSE.txt  README.md  README.rst  pyproject.toml  requirements-dev.txt
docs/: conf.py  contributing.rst  index.rst  install.rst  releases.rst  stream-form-steps.rst  stream-form.rst
docs/_templates/: sponsor.html
testproject/home/: models.py
testproject/home/migrations/: 0001_initial.py  0002_create_homepage.py  0003_formpage_formfield.py  0004_multistepstreamformpage_singlestepstreamformpage_and_more.py  0004_streamformpage_mysubmissionrevision_and_more.py  0005_alter_multistepstreamformpage_form_fields_and_more.py
testproject/home/static/home/: style.css
testproject/home/templates/home/: form_page.html  form_page_landing.html  page.html  stream_form_page.html
testproject/testproject/: settings.py  urls.py  wsgi.py
wagtail_flexible_forms/: blocks.py  edit_handlers.py  models.py  wagtail_hooks.py
